--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-prerender": "^1.0.8"
   }
 }
