--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@react-email/render": "^0.0.12",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
