--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node puppeteer.cjs & react-snap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+  },
+  "reactSnap": {
+    "source": "dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -15,6 +19,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "nodemailer": "^6.9.13",
+    "puppeteer": "^22.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -30,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
+    "react-snap": "^1.23.0",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.0",
     "vite-plugin-prerender": "^1.0.8"
