--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-"version": 2,
-"builds": [
-  {
-    "src": "vercel-build.js",
-    "use": "@vercel/node"
-  }
-],
-"routes": [
-  {
-    "src": "/(.*)",
-    "dest": "/index.html"
-  }
-]
+  "version": 2,
+  "builds": [
+    {
+      "src": "vercel-build.js",
+      "use": "@vercel/node"
+    }
+  ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
 }
