--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "react-snap",
+    "postbuild": "node puppetter.cjs && react-snap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "reactSnap": {
-    "source": "dist",
-    "puppeteerArgs": [
+    "source": "./",
+     "puppeteerArgs": [
       "--no-sandbox",
       "--disable-setuid-sandbox"
     ]
