--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "reactSnap": {
     "source": "./",
-     "puppeteerArgs": [
+    "puppeteerArgs": [
       "--no-sandbox",
       "--disable-setuid-sandbox"
     ]
@@ -20,6 +20,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "nodemailer": "^6.9.13",
