--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "npx puppeteer browsers install chrome && node puppeteer.cjs && react-snap",
+    "postbuild": "react-snap",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "reactSnap": {
-    "source": "./",
+    "source": "/",
+    "skipThirdPartyRequests": true,
+    "preconnectThirdParty": false,
     "puppeteerArgs": [
       "--no-sandbox",
       "--disable-setuid-sandbox"
@@ -20,12 +22,9 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "nodemailer": "^6.9.13",
-    "puppeteer": "^22.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
